force-app/main/default/objects/Account_test_data__c/Account_test_data__c.object-meta.xml
<CustomObject>
    <label>Account Test</label>
    <nameField>
        <label>Account test data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>