force-app/main/default/objects/Account_test_data__c/fields/AccountNumbers__c.field-meta.xml
<CustomField>
    <fullName>AccountNumbers__c</fullName>
    <label>Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>