force-app/main/default/objects/Account_test_data__c/fields/BillingAddress_city__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress_city__c</fullName>
    <label>BillingAddress.city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>