force-app/main/default/objects/Account_test_data__c/fields/BillingAddress_country__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress_country__c</fullName>
    <label>BillingAddress.country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>