force-app/main/default/objects/Account_test_data__c/fields/BillingAddress_countryCode__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress_countryCode__c</fullName>
    <label>BillingAddress.countryCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>