force-app/main/default/objects/Account_test_data__c/fields/BillingAddress_postalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress_postalCode__c</fullName>
    <label>BillingAddress.postalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>