force-app/main/default/objects/Account_test_data__c/fields/BillingAddress_stateCode__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress_stateCode__c</fullName>
    <label>BillingAddress.stateCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>