force-app/main/default/objects/Account_test_data__c/fields/BillingAddress_street__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress_street__c</fullName>
    <label>BillingAddress.street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>